--- a/ESEO_TP_Server/.classpath
+++ b/ESEO_TP_Server/.classpath
@@ -24,5 +24,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="D:/mysql-connector-java-8.0.15.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
